# mumhors

./: CMakeLists.txt  run_bitmap_array.sh  run_bitmap_linkedlist.sh
src/: mumhors.c  mumhors.h
src/utils/: bitmap.c  mumhors_math.c  mumhors_math.h
test/: main.c
